log in page of 30dec2021 design compleated

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <h1>Design Daily</h1>
     <main >
         
-        <a href="./1. Settings (design of 31 dec 2021 by Design Daily)/index.html" class="card one">
+        <a href="./1.Settings_(31-dec-21-by-UIDesignDaily)/index.html" class="card one">
             <h2>Settings</h2>
             <h4>31 Dec 2021</h4>
         </a>
-        <div class="card ">
-            <h2>Coming Soon</h2>
-            <h4></h4>
-        </div>
+        <a href="./2.Login_(30-dec-21-UIDesignDaily)/index.html" class="card two">
+            <h2>Log in</h2>
+            <h4>30 Dec 2021</h4>
+        </a>
         <div class="card ">
             <h2>Coming Soon</h2>
             <h4></h4>
