--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@
             <h2>Settings</h2>
             <h4>31 Dec 2021</h4>
         </a>
+
         <a href="./2.Login_(30-dec-21-UIDesignDaily)/index.html" class="card two">
             <h2>Log in</h2>
             <h4>30 Dec 2021</h4>
         </a>
+
         <a href="./3.Subscribesion_(29-dec-21-UIDesignDaily)/index.html" class="card three">
             <h2>Subscriptions</h2>
             <h4>29 Dec 2021</h4>
-        </a><div class="card ">
-            <h2>Coming Soon</h2>
-            <h4></h4>
-        </div><div class="card ">
+        </a>
+
+        <a href="./4.SelectPlan_(05-jan-22-UIDesignDaily)/index.html" class="card four">
+            <h2>Select Plan</h2>
+            <h4>05 jan 2022</h4>
+        </a>
+        
+        <div class="card ">
             <h2>Coming Soon</h2>
             <h4></h4>
         </div><div class="card ">
